Chore fix white space between navbar and profile section

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  /* padding-top: 90px; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,7 +12,11 @@ code {
     monospace;
 }
 
+.main-container {
+  margin-top: -100px;
+}
+
 .section-container {
-  padding-top: 75px;
-  margin-bottom: -75px;
+  padding-top: 100px;
+  margin-bottom: -100px;
 }
